--- a/src/sample/selectPage.fxml
+++ b/src/sample/selectPage.fxml
@@ -8,26 +8,26 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.SelectCatController">
+<GridPane alignment="center" hgap="10" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.SelectController">
    <children>
       <Pane fx:id="pane" prefHeight="600.0" prefWidth="600.0">
          <children>
-            <Button fx:id="sunnyButton" layoutX="250.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleSunnyButton" prefHeight="50.0" prefWidth="100.0" text="SUNNY">
+            <Button fx:id="sunnyButton" layoutX="250.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleSunnyButton" prefHeight="50.0" prefWidth="100.0" styleClass="howto-button" stylesheets="@selectPage.css" text="SUNNY">
                <font>
                   <Font name="waan free Regular" size="32.0" />
                </font>
             </Button>
-            <Button fx:id="gingerButton" layoutX="75.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleGingerButton" prefHeight="50.0" prefWidth="100.0" text="GINGER">
+            <Button fx:id="gingerButton" layoutX="75.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleGingerButton" prefHeight="50.0" prefWidth="100.0" styleClass="howto-button" stylesheets="@selectPage.css" text="GINGER">
                <font>
                   <Font name="waan free Regular" size="32.0" />
                </font>
             </Button>
-            <Button fx:id="smokeyButton" layoutX="425.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleSmokeyButton" prefHeight="50.0" prefWidth="100.0" text="SMOKEY">
+            <Button fx:id="smokeyButton" layoutX="425.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleSmokeyButton" prefHeight="50.0" prefWidth="100.0" styleClass="howto-button" stylesheets="@selectPage.css" text="SMOKEY">
                <font>
                   <Font name="waan free Regular" size="32.0" />
                </font>
             </Button>
-            <Label alignment="CENTER" layoutX="65.0" layoutY="62.0" prefHeight="126.0" prefWidth="470.0" text="Select your Cat" textFill="#00000072">
+            <Label fx:id="label" alignment="CENTER" prefHeight="250.0" prefWidth="600.0" stylesheets="@selectPage.css" text="Select your Cat">
                <font>
                   <Font name="waan free Regular" size="96.0" />
                </font>
