--- a/src/sample/startPage.fxml
+++ b/src/sample/startPage.fxml
@@ -8,18 +8,28 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.StartController">
+<GridPane alignment="center" hgap="10" prefHeight="600.0" prefWidth="600.0" stylesheets="@startPage.css" vgap="10" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.StartController">
    <children>
       <Pane fx:id="pane" prefHeight="600.0" prefWidth="600.0">
          <children>
-            <Label alignment="CENTER" layoutX="94.0" layoutY="14.0" prefHeight="200.0" prefWidth="400.0" text="Run for your FISH!!" textFill="#00000075">
+            <Label fx:id="nameLabel" alignment="CENTER" prefHeight="250.0" prefWidth="600.0" text="Run for your FISH!!">
                <font>
                   <Font name="waan free Italic" size="96.0" />
                </font>
             </Label>
-            <Button fx:id="startButton" layoutX="203.0" layoutY="454.0" mnemonicParsing="false" onAction="#handleStartButton" prefHeight="100.0" prefWidth="200.0" text="START">
+            <Button fx:id="startButton" layoutX="203.0" layoutY="454.0" mnemonicParsing="false" onAction="#handleStartButton" prefHeight="100.0" prefWidth="200.0" styleClass="start-button" text="START">
                <font>
                   <Font name="waan free Regular" size="50.0" />
+               </font>
+            </Button>
+            <Button fx:id="creditButton" layoutX="424.0" layoutY="477.0" mnemonicParsing="false" onAction="#handleStartButton" prefHeight="55.0" prefWidth="128.0" styleClass="credit-button" text="Credits">
+               <font>
+                  <Font name="waan free Regular" size="28.0" />
+               </font>
+            </Button>
+            <Button fx:id="howToButton" layoutX="51.0" layoutY="477.0" mnemonicParsing="false" onAction="#handleStartButton" prefHeight="55.0" prefWidth="128.0" styleClass="howto-button" text="How to Play">
+               <font>
+                  <Font name="waan free Regular" size="31.0" />
                </font>
             </Button>
          </children>
