--- a/src/sample/gamePage.fxml
+++ b/src/sample/gamePage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,7 +17,7 @@
                   <Font name="waan free Regular" size="43.0" />
                </font>
             </Label>
-            <Label fx:id="gameOverLabel" alignment="CENTER" layoutY="231.0" opacity="0.0" prefHeight="132.0" prefWidth="600.0" styleClass="gameover-label" stylesheets="@gamePage.css" text="GAME OVER.." textFill="RED">
+            <Label fx:id="gameOverLabel" alignment="CENTER" disable="true" layoutY="231.0" opacity="0.0" prefHeight="132.0" prefWidth="600.0" styleClass="gameover-label" stylesheets="@gamePage.css" text="GAME OVER.." textFill="RED">
                <font>
                   <Font name="waan free Regular" size="200.0" />
                </font>
@@ -26,6 +27,11 @@
                   <Font name="waan free Regular" size="200.0" />
                </font>
             </Label>
+            <Button fx:id="restartButton" alignment="CENTER" disable="true" layoutX="486.0" layoutY="486.0" mnemonicParsing="false" onAction="#handleRestartButton" opacity="0.0" prefHeight="100.0" prefWidth="100.0" stylesheets="@gamePage.css" text="↺">
+               <font>
+                  <Font name="waan free Regular" size="34.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
    </children>
