--- a/src/view/creditPage.fxml
+++ b/src/view/creditPage.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" prefHeight="600.0" prefWidth="600.0" stylesheets="@howToPage.css" vgap="10" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.HowToController">
+<GridPane alignment="center" hgap="10" prefHeight="600.0" prefWidth="600.0" stylesheets="@howToPage.css" vgap="10" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.creditController">
    <children>
       <Pane fx:id="pane" prefHeight="600.0" prefWidth="600.0" styleClass="pane">
          <children>
-            <Label fx:id="nameLabel" alignment="CENTER" prefHeight="153.0" prefWidth="600.0" styleClass="name-label" stylesheets="@howToPage.css" text="- How to Play -">
+            <Label fx:id="nameLabel" alignment="CENTER" prefHeight="153.0" prefWidth="600.0" styleClass="name-label" stylesheets="@howToPage.css" text="- Credit -">
                <font>
                   <Font name="waan free Italic" size="96.0" />
                </font>
@@ -22,15 +22,11 @@
                   <Font name="waan free Regular" size="31.0" />
                </font>
             </Button>
-            <Label fx:id="howToLabel" alignment="CENTER" layoutY="114.0" prefHeight="160.0" prefWidth="600.0" styleClass="howto-label">
+            <Label fx:id="creditLabel" alignment="CENTER" layoutY="235.0" prefHeight="160.0" prefWidth="600.0" styleClass="howto-label">
                <font>
                   <Font name="waan free Italic" size="96.0" />
                </font>
             </Label>
-            <Label fx:id="wLabel" alignment="CENTER" layoutX="273.0" layoutY="324.0" prefHeight="50.0" prefWidth="50.0" styleClass="wsad-label" text="W" />
-            <Label fx:id="sLabel" alignment="CENTER" layoutX="273.0" layoutY="496.0" prefHeight="50.0" prefWidth="50.0" styleClass="wsad-label" text="S" />
-            <Label fx:id="aLabel" alignment="CENTER" layoutX="143.0" layoutY="407.0" prefHeight="50.0" prefWidth="50.0" styleClass="wsad-label" text="A" />
-            <Label fx:id="dLabel" alignment="CENTER" layoutX="407.0" layoutY="407.0" prefHeight="50.0" prefWidth="50.0" styleClass="wsad-label" text="D" />
          </children>
       </Pane>
    </children>
